templates/armada-operator_template.yaml
---
# Source: armada-operator/templates/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-armada-operator-controller-manager-metrics-service
  labels:
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/created-by: armada-operator
    app.kubernetes.io/part-of: armada-operator
    control-plane: controller-manager
    helm.sh/chart: armada-operator-0.1.1
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
---
# Source: armada-operator/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-armada-operator-webhook-service
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: armada-operator
    app.kubernetes.io/part-of: armada-operator
    helm.sh/chart: armada-operator-0.1.1
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
---
# Source: armada-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-armada-operator-controller-manager
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: armada-operator
    app.kubernetes.io/part-of: armada-operator
    control-plane: controller-manager
    helm.sh/chart: armada-operator-0.1.1
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: armada-operator
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: armada-operator
        app.kubernetes.io/instance: release-name
      annotations:
        kubectl.kubernetes.io/default-container: manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
                - ppc64le
                - s390x
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      containers:
      - args:
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=127.0.0.1:8080
        - --leader-elect
        command:
        - /armada-operator
        image: gresearch/armada-operator:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=0
        image: gcr.io/kubebuilder/kube-rbac-proxy:0.13.0
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: false
      serviceAccountName: release-name-armada-operator-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
# Source: armada-operator/templates/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-armada-operator-mutating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-armada-operator-serving-cert
  labels:
    helm.sh/chart: armada-operator-0.1.1
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-armada-server
  failurePolicy: Fail
  name: armada-server.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - armada-servers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-binoculars
  failurePolicy: Fail
  name: mbinoculars.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - binoculars
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-eventingester
  failurePolicy: Fail
  name: meventingester.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - eventingesters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-executor
  failurePolicy: Fail
  name: mexecutor.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - executors
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-lookout
  failurePolicy: Fail
  name: mlookout.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - lookout
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-lookoutingester
  failurePolicy: Fail
  name: mlookoutingester.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - lookoutingesters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-scheduler
  failurePolicy: Fail
  name: mscheduler.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduler
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /mutate-install-armadaproject-io-v1alpha1-scheduleringester
  failurePolicy: Fail
  name: mscheduleringester.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduleringesters
  sideEffects: None
---
# Source: armada-operator/templates/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-armada-operator-validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-armada-operator-serving-cert
  labels:
    helm.sh/chart: armada-operator-0.1.1
    app.kubernetes.io/name: armada-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /validate-install-armadaproject-io-v1alpha1-armada-server
  failurePolicy: Fail
  name: varmada-server.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - armada-servers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /validate-install-armadaproject-io-v1alpha1-eventingester
  failurePolicy: Fail
  name: veventingester.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - eventingesters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /validate-install-armadaproject-io-v1alpha1-executor
  failurePolicy: Fail
  name: vexecutor.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - executors
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /validate-install-armadaproject-io-v1alpha1-lookoutingester
  failurePolicy: Fail
  name: vlookoutingester.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - lookoutingesters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'release-name-armada-operator-webhook-service'
      namespace: 'default'
      path: /validate-install-armadaproject-io-v1alpha1-scheduleringester
  failurePolicy: Fail
  name: vscheduleringester.kb.io
  rules:
  - apiGroups:
    - install.armadaproject.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scheduleringesters
  sideEffects: None
